--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       </section>
       <!--===== CONTACT =====-->
       <section class="contact section" id="contact">
-        <h2 class="section-title">Contactos</h2>
+        <h2 class="section-title">Contacto</h2>
         <div class="contact__container bd-grid">
           <form action="https://formsubmit.co/422bb54f236dea1a80430bd34c9b2e4c" method="POST" class="contact__form">
             <div class="contact__inputs">
