--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           </div>
           <div>
             <h2 class="about__subtitle">Soy Franklin</h2>
-            <p class="about__text">Soy estudiante que comenzó a interesarse en el funcionamiento de los programas a una temprana edad. Con el transcurso del tiempo, inició sus investigaciones en el ámbito de la programación, culminando en la creación de su primer programa (2015). Continuando con su afán de conocimiento, se adentró en el campo de la ingeniería inversa y la ofuscación, adquiriendo nuevos conocimientos a través de la participación en foros en línea y trabajando en proyectos.<br>
+            <p class="about__text">Soy un estudiante que comenzó a interesarse en el funcionamiento de los programas a una temprana edad. Con el transcurso del tiempo, inició sus investigaciones en el ámbito de la programación, culminando en la creación de su primer programa (2015). Continuando con su afán de conocimiento, se adentró en el campo de la ingeniería inversa y la ofuscación, adquiriendo nuevos conocimientos a través de la participación en foros en línea y trabajando en proyectos.<br>
 			<br>Soy un desarrollador con habilidades en lenguajes de programación como C#, Java, Python, JavaScript, HTML, CSS y lenguajes de marcas como XML y JSON. También tengo experiencia en la creación de aplicaciones web y móviles utilizando frameworks como Angular, React y Vue. Además, tengo conocimientos en el manejo de bases de datos como MySQL, MongoDB y Firebase.</p>
           </div>
         </div>
