--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
           </div>
           <div>
-            <img src="assets/img/works.avif" alt="" class="skills__img">
+            <img src="assets/img/works.gif" alt="" class="skills__img">
           </div>
         </div>
       </section>
